# FastAPi_aws_image_project1

./: Dockerfile  pyproject.toml  req.txt  test.db
FastAPi_aws_image_project1/: Dockerfile  main.py
FastAPi_aws_image_project1/app/: database.py  main.py  models.py  s3_service.py
app/: database.py  main.py  models.py  s3_service.py
